--- a/themes/mypiggyback/about.html
+++ b/themes/mypiggyback/about.html
@@ -497,10 +497,10 @@
                       <div class="mbp-atgi-socials-media">
                         <div class="mbp-atgism-lft">
                           <ul class="reset-list">
-                            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+                            <li><a target="_blank" href="#"><i class="fab fa-facebook-f"></i></a></li>
+                            <li><a target="_blank" href="#"><i class="fab fa-instagram"></i></a></li>
+                            <li><a target="_blank" href="#"><i class="fab fa-twitter"></i></a></li>
+                            <li><a target="_blank" href="#"><i class="fab fa-youtube"></i></a></li>
                           </ul>
                         </div>
                         <div class="mbp-atgism-rgt">
@@ -520,7 +520,7 @@
 </section>
 
 
-<section class="mbp-location-sec">
+<!-- <section class="mbp-location-sec inline-bg" style="background: url('assets/images/mbp-loca-bg.png');">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
@@ -537,21 +537,64 @@
             </h2>
             <h3 class="mbp-loca-title left-icon-title">
               <span>England </span>
-              <i><img src="assets/images/title-location-icon.svg" alt=""></i>
+              <i class="fas fa-map-marker-alt"></i>
             </h3>
             <p>Phasellus a neque pretium, hendrerit tortor vitae, accumsan neque. Suspendisse posuere odio quam, id elementum arcu egestas at. Phasellus ante magna, egestas a ultricies quis, dapibus at massa. </p>
             <h3 class="mbp-loca-title left-icon-title">
               <span>Wales</span>
-              <i><img src="assets/images/title-location-icon.svg" alt=""></i>
+              <i class="fas fa-map-marker-alt"></i>
             </h3>
             <p>Phasellus a neque pretium, hendrerit tortor vitae, accumsan neque. Suspendisse posuere odio quam, id elementum arcu egestas at.</p>
             <h3 class="mbp-loca-title left-icon-title">
               <span>Scotland</span>
-              <i><img src="assets/images/title-location-icon.svg" alt=""></i>
+              <i class="fas fa-map-marker-alt"></i>
             </h3>
             <p>Phasellus a neque pretium, hendrerit tortor vitae, accumsan neque. Suspendisse posuere odio quam, id elementum arcu egestas at. </p>
             <div class="mbp-location-btn">
               <a class="fl-red-btn mbp-loca-btn" href="#">BOOK LOCAL SERVICE</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section> -->
+
+
+<section class="mpb-about-sec inline-bg" style="background: url('assets/images/mbp-loca-bg.png');">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="mpb-about-sec-inr clearfix">
+          <div class="mpb-about-lft">
+            <div class="mpb-about-img">
+              <img src="assets/images/mpb-about-img-01.jpg">
+            </div>
+          </div>
+          <div class="mpb-about-rgt">
+            <div class="mbp-about-des">
+              <h2 class="mbp-location-entry-hdr-title left-icon-title fl-h2">
+                <span>Our Locations...</span>
+                <i><img src="assets/images/title-location-icon.svg" alt=""></i>
+              </h2>
+              <h3 class="mbp-loca-title left-icon-title">
+                <span>England </span>
+                <i class="fas fa-map-marker-alt"></i>
+              </h3>
+              <p>Phasellus a neque pretium, hendrerit tortor vitae, accumsan neque. Suspendisse posuere odio quam, id elementum arcu egestas at. Phasellus ante magna, egestas a ultricies quis, dapibus at massa. </p>
+              <h3 class="mbp-loca-title left-icon-title">
+                <span>Wales</span>
+                <i class="fas fa-map-marker-alt"></i>
+              </h3>
+              <p>Phasellus a neque pretium, hendrerit tortor vitae, accumsan neque. Suspendisse posuere odio quam, id elementum arcu egestas at.</p>
+              <h3 class="mbp-loca-title left-icon-title">
+                <span>Scotland</span>
+                <i class="fas fa-map-marker-alt"></i>
+              </h3>
+              <p>Phasellus a neque pretium, hendrerit tortor vitae, accumsan neque. Suspendisse posuere odio quam, id elementum arcu egestas at. </p>
+              <div class="mbp-location-btn">
+                <a class="fl-red-btn mbp-loca-btn" href="#">BOOK LOCAL SERVICE</a>
+              </div>
             </div>
           </div>
         </div>
