--- a/themes/mypiggyback/home2.html
+++ b/themes/mypiggyback/home2.html
@@ -127,10 +127,7 @@
   <li class="facebook"><a href="#"></a></li>
 </ol>
 
-<section class="mpb-about-sec">
-  <div class="mbp-about-sec-bg">
-    <img src="assets/images/mpb-about-sec-bg.png">
-  </div>
+<section class="mpb-about-sec inline-bg" style="background: url('assets/images/mpb-about-sec-bg.png');">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
@@ -204,10 +201,10 @@
               </div>
               <div class="ftr-menu-socials-media">
                 <ul class="reset-list">
-                  <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                  <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                  <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                  <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                  <li><a target="_blank" href="#"><i class="fab fa-facebook-f"></i></a></li>
+                  <li><a target="_blank" href="#"><i class="fab fa-twitter"></i></a></li>
+                  <li><a target="_blank" href="#"><i class="fab fa-instagram"></i></a></li>
+                  <li><a target="_blank" href="#"><i class="fab fa-linkedin-in"></i></a></li>
                 </ul>
               </div>
             </div>
