--- a/themes/mypiggyback/services.html
+++ b/themes/mypiggyback/services.html
@@ -97,6 +97,7 @@
 
 </head>
 <body>
+   
 <header class="header-wrap">
   <div class="top-bar">
     <div class="container">
@@ -174,7 +175,35 @@
   </div>
 </header>
 
-<div class="services-page">
+<section class="page-banner-sec-wrp">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="page-banner-wrp clearfix">
+          <div class="page-banner-dsc">
+            <h1 class="fl-h1">Contact us...</h1>
+          </div>
+          <div class="breadcumbs">
+            <ul class="reset-list clearfix">
+              <li>
+                <a href="#" class="fl-home-icon">
+                  <span class="item">HOME</span>
+                </a>
+              </li>
+              <li class="active">
+                <a href="#">
+                  <span>SERVICES</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!--  -->
+<section class="services-page">
   <div class="services-item-cntrl">
     <div class="serv-fea-img">
       <div class="s-f-img-cntrl">
@@ -248,101 +277,6 @@
       </div>
     </div>
   </div>
-</div>
-
-<!-- <section class="services-page">
-  <div class="services-item-cntrl">
-    <div class="serv-fea-img inline-bg mHc" style="background-image: url('assets/images/emergency-mechanic-response-service.jpg');">
-      <div class="emrs">
-        <svg class="Icon-1" width="86" height="63" viewBox="0 0 86 63" fill="#0178d4"><use xlink:href="#Icon-1"></use></svg>
-      </div>
-    </div>
-    <div class="sic-cntrl">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="sic mHc">
-              <h2 class="fl-h2 sic-title">24hr Emergency<br> mechanic response</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sceler-isque condimentum nisl vitae ornare. Nullam dapibus, lectus vitae tristique porttitor, tortor dui congue magna, a iaculis nibh risus ut augue. Mauris ultrices est condimentum arcu tempus dictum. Vivamus fermentum, dui sit amet ultrices aliquam, magna quam grav-ida ipsum, vel auctor libero felis igula. </p>
-              <a class=" fl-red-btn" href="#">BOOK SERVICE</a>
-            </div>
-          </div>    
-        </div>
-      </div>
-    </div>  
-  </div>
-
-
-  <div class="services-item-cntrl lft-des-rgt-img">
-    <div class="serv-fea-img inline-bg mHc" style="background-image: url('assets/images/battery-replacement.jpg');">
-      <div class="emrs">
-        <svg class="Icon-2" width="80" height="60" viewBox="0 0 86 63" fill="#0178d4"><use xlink:href="#Icon-2"></use></svg>
-      </div>
-    </div>
-    <div class="sic-cntrl">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="sic mHc">
-              <h2 class="fl-h2 sic-title">Battery replacement</h2>
-              <p>Cras egestas efficitur urna at eleifend. Curabitur ac maximus libero, ultrices egestas metus. Proin aliquam finibus augue in blandit. Proin ullamcorper tincidunt dui, nec tempus quam congue a. Morbi efficitur arcu at metus tincidunt mollis. Pellentesque scelerisque sem vitae ex sodales, non volutpat mauris tristique.</p>
-              <p>Cras pellentesque lectus eget turpis placerat fermentum. Fusce fer-mentum, erat nec blandit aliquam, orci leo tempus augue, a auctor augue est ac ex. Sed nec pellentesque nunc. </p>
-              <a class=" fl-red-btn" href="#">BOOK SERVICE</a>
-            </div>
-          </div>    
-        </div>
-      </div>
-    </div>  
-  </div>
-
-  <div class="services-item-cntrl">
-    <div class="serv-fea-img inline-bg mHc" style="background-image: url('assets/images/mobile-tyre-replacement.jpg');">
-      <div class="emrs">
-        <svg class="Icon-3" width="73" height="68" viewBox="0 0 73 68" fill="#0178d4"><use xlink:href="#Icon-3"></use></svg>
-      </div>
-    </div>
-    <div class="sic-cntrl">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="sic mHc">
-              <h2 class="fl-h2 sic-title">24hr Mobile tyre <br>replacement </h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sceler-isque condimentum nisl vitae ornare. Nullam dapibus, lectus vitae tristique porttitor, tortor dui congue magna, a iaculis nibh risus ut augue. Mauris ultrices est condimentum arcu tempus dictum. Vivamus fermentum, dui sit amet ultrices aliquam, magna quam grav-ida ipsum, vel auctor libero felis igula. </p>
-              <a class=" fl-red-btn" href="#">BOOK SERVICE</a>
-            </div>
-          </div>    
-        </div>
-      </div>
-    </div>  
-  </div>
-
-
-  <div class="services-item-cntrl lft-des-rgt-img">
-    <div class="serv-fea-img inline-bg mHc" style="background-image: url('assets/images/car-body-repair.jpg');">
-      <div class="emrs">
-        <svg class="Icon-4" width="71" height="75" viewBox="0 0 71 75" fill="#0178d4"><use xlink:href="#Icon-4"></use></svg>
-      </div>
-    </div>
-    <div class="sic-cntrl">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="sic mHc">
-              <h2 class="fl-h2 sic-title">Car body repair</h2>
-              <p>Cras egestas efficitur urna at eleifend. Curabitur ac maximus libero, ultrices egestas metus. Proin aliquam finibus augue in blandit. Proin ullamcorper tincidunt dui, nec tempus quam congue a. Morbi efficitur arcu at metus tincidunt mollis. Pellentesque scelerisque sem vitae ex sodales, non volutpat mauris tristique.</p>
-              <p>Cras pellentesque lectus eget turpis placerat fermentum. Fusce fer-mentum, erat nec blandit aliquam, orci leo tempus augue, a auctor augue est ac ex. Sed nec pellentesque nunc. </p>
-              <a class=" fl-red-btn" href="#">BOOK SERVICE</a>
-            </div>
-          </div>    
-        </div>
-      </div>
-    </div>  
-  </div>         
-</section> -->
-
-<!-- part-2 -->
-<section class="services-page">
-       
 </section>
 
 
