--- a/themes/mypiggyback/home2.html
+++ b/themes/mypiggyback/home2.html
@@ -139,7 +139,10 @@
           </div>
           <div class="mpb-about-rgt">
             <div class="mbp-about-des">
-              <h2 class="mbp-about-des-title fl-h2">A little about us...</h2>
+              <h2 class="mbp-about-des-title left-icon-title fl-h2">
+                <span>A little about us...</span>
+                <i><img src="assets/images/title-location-icon.svg" alt=""></i>
+              </h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales sagittis lorem sed mattis. Nunc rutrum mattis pulvinar. In sem velit, faucibus non mauris sed, mattis auctor purus. Etiam egestas nisl eget dapibus suscipit. Nam rutrum nisl sapien, id hendrerit nulla ullamcorper a. Sed a ipsum nisl. Sed quam ex, vulputate vitae scelerisque quis, vulputate vel velit.</p>
               <ul>
                 <li>We offer multiple services at great value</li>
