--- a/themes/mypiggyback/home2.html
+++ b/themes/mypiggyback/home2.html
@@ -138,7 +138,7 @@
             </div>
           </div>
           <div class="mpb-about-rgt">
-            <div class="mbp-about-des">
+            <div class="mbp-about-rgt-des">
               <h2 class="mbp-about-des-title left-icon-title fl-h2">
                 <span>A little about us...</span>
                 <i><img src="assets/images/title-location-icon.svg" alt=""></i>
