--- a/themes/mypiggyback/about.html
+++ b/themes/mypiggyback/about.html
@@ -291,6 +291,34 @@
   </div>
 </header>
 
+<section class="page-banner-sec-wrp">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="page-banner-wrp clearfix">
+          <div class="page-banner-dsc">
+            <h1 class="fl-h1">About Us...</h1>
+          </div>
+          <div class="breadcumbs">
+            <ul class="reset-list clearfix">
+              <li>
+                <a href="#" class="fl-home-icon">
+                  <span class="item">HOME</span>
+                </a>
+              </li>
+              <li class="active">
+                <a href="#">
+                  <span>ABOUT</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 <section class="mpb-about-des-sec">
   <div class="container">
     <div class="row">
@@ -560,48 +588,50 @@
   </div>
 </section> -->
 
-
-<section class="mpb-about-sec inline-bg" style="background: url('assets/images/mbp-loca-bg.png');">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="mpb-about-sec-inr clearfix">
-          <div class="mpb-about-lft">
-            <div class="mpb-about-img">
-              <img src="assets/images/mpb-about-img-01.jpg">
+<div class="about-ctlr">
+  <section class="mpb-about-sec inline-bg" style="background: url('assets/images/mbp-loca-bg.png');">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="mpb-about-sec-inr clearfix">
+            <div class="mpb-about-lft">
+              <div class="mpb-about-img">
+                <img src="assets/images/mpb-about-img-01.jpg">
+              </div>
             </div>
-          </div>
-          <div class="mpb-about-rgt">
-            <div class="mbp-about-des">
-              <h2 class="mbp-location-entry-hdr-title left-icon-title fl-h2">
-                <span>Our Locations...</span>
-                <i><img src="assets/images/title-location-icon.svg" alt=""></i>
-              </h2>
-              <h3 class="mbp-loca-title left-icon-title">
-                <span>England </span>
-                <i class="fas fa-map-marker-alt"></i>
-              </h3>
-              <p>Phasellus a neque pretium, hendrerit tortor vitae, accumsan neque. Suspendisse posuere odio quam, id elementum arcu egestas at. Phasellus ante magna, egestas a ultricies quis, dapibus at massa. </p>
-              <h3 class="mbp-loca-title left-icon-title">
-                <span>Wales</span>
-                <i class="fas fa-map-marker-alt"></i>
-              </h3>
-              <p>Phasellus a neque pretium, hendrerit tortor vitae, accumsan neque. Suspendisse posuere odio quam, id elementum arcu egestas at.</p>
-              <h3 class="mbp-loca-title left-icon-title">
-                <span>Scotland</span>
-                <i class="fas fa-map-marker-alt"></i>
-              </h3>
-              <p>Phasellus a neque pretium, hendrerit tortor vitae, accumsan neque. Suspendisse posuere odio quam, id elementum arcu egestas at. </p>
-              <div class="mbp-location-btn">
-                <a class="fl-red-btn mbp-loca-btn" href="#">BOOK LOCAL SERVICE</a>
+            <div class="mpb-about-rgt">
+              <div class="mbp-about-des">
+                <h2 class="mbp-location-entry-hdr-title left-icon-title fl-h2">
+                  <span>Our Locations...</span>
+                  <i><img src="assets/images/title-location-icon.svg" alt=""></i>
+                </h2>
+                <h3 class="mbp-loca-title left-icon-title">
+                  <span>England </span>
+                  <i class="fas fa-map-marker-alt"></i>
+                </h3>
+                <p>Phasellus a neque pretium, hendrerit tortor vitae, accumsan neque. Suspendisse posuere odio quam, id elementum arcu egestas at. Phasellus ante magna, egestas a ultricies quis, dapibus at massa. </p>
+                <h3 class="mbp-loca-title left-icon-title">
+                  <span>Wales</span>
+                  <i class="fas fa-map-marker-alt"></i>
+                </h3>
+                <p>Phasellus a neque pretium, hendrerit tortor vitae, accumsan neque. Suspendisse posuere odio quam, id elementum arcu egestas at.</p>
+                <h3 class="mbp-loca-title left-icon-title">
+                  <span>Scotland</span>
+                  <i class="fas fa-map-marker-alt"></i>
+                </h3>
+                <p>Phasellus a neque pretium, hendrerit tortor vitae, accumsan neque. Suspendisse posuere odio quam, id elementum arcu egestas at. </p>
+                <div class="mbp-location-btn">
+                  <a class="fl-red-btn mbp-loca-btn" href="#">BOOK LOCAL SERVICE</a>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
+</div>
+
 
 
 <footer class="footer-wrp">
