--- a/themes/mypiggyback/front-page.html
+++ b/themes/mypiggyback/front-page.html
@@ -362,7 +362,7 @@
                   <span>Vehicle Transport</span>
                 </button>
               </div>
-              <div id="tab-1" class="fl-tab-content current">
+              <div id="tab-1" class="fl-tab-content vcl-tab-content current">
                 <div class="vehicle-recovery-form vehicle-form">
                   <form>
                     <div class="input-field-row">
@@ -386,7 +386,7 @@
                   </form>
                 </div>
               </div>
-              <div id="tab-2" class="fl-tab-content">
+              <div id="tab-2" class="fl-tab-content vcl-tab-content">
                <div class="vehicle-transport-form vehicle-form">
                   <form>
                     <div class="input-field-row">
@@ -550,7 +550,7 @@
           <div class="Vehicle-cntlr">
             <div class="Vehicle-desc-cntlr">
 
-              <div id="tab-1" class="Vehicle-desc fl-tab-content current">
+              <div id="tab-1" class="Vehicle-desc fl-tab-content vcl-tab-content current">
                 <h2 class="Vehicle-desc-title fl-h2">Vehicle Tow & Recovery</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales sagittis lorem sed mattis. Nunc rutrum mattis pulvinar. In sem velit, faucibus non mauris sed, mattis auctor purus. Etiam egestas nisl eget dapibus suscipit. Nam rutrum nisl sapien, id hendrerit nulla ullamcorper a ipsum nisl.</p>
                 <div class="vcl-btn-cntlr">
@@ -563,7 +563,7 @@
                 </div>
               </div>
 
-              <div id="tab-2" class="Vehicle-desc fl-tab-content">
+              <div id="tab-2" class="Vehicle-desc fl-tab-content vcl-tab-content">
                 <h2 class="Vehicle-desc-title fl-h2">Vehicle Tow & Recovery 2</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales sagittis lorem sed mattis. Nunc rutrum mattis pulvinar. In sem velit, faucibus non mauris sed, mattis auctor purus. Etiam egestas nisl eget dapibus suscipit. Nam rutrum nisl sapien, id hendrerit nulla ullamcorper a ipsum nisl.</p>
                 <div class="vcl-btn-cntlr">
@@ -576,7 +576,7 @@
                 </div>
               </div>
 
-              <div id="tab-3" class="Vehicle-desc fl-tab-content">
+              <div id="tab-3" class="Vehicle-desc fl-tab-content vcl-tab-content">
                 <h2 class="Vehicle-desc-title fl-h2">Vehicle Tow & Recovery 3</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales sagittis lorem sed mattis. Nunc rutrum mattis pulvinar. In sem velit, faucibus non mauris sed, mattis auctor purus. Etiam egestas nisl eget dapibus suscipit. Nam rutrum nisl sapien, id hendrerit nulla ullamcorper a ipsum nisl.</p>
                 <div class="vcl-btn-cntlr">
@@ -589,7 +589,7 @@
                 </div>
               </div>
 
-              <div id="tab-4" class="Vehicle-desc fl-tab-content">
+              <div id="tab-4" class="Vehicle-desc fl-tab-content vcl-tab-content">
                 <h2 class="Vehicle-desc-title fl-h2">Vehicle Tow & Recovery 4</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales sagittis lorem sed mattis. Nunc rutrum mattis pulvinar. In sem velit, faucibus non mauris sed, mattis auctor purus. Etiam egestas nisl eget dapibus suscipit. Nam rutrum nisl sapien, id hendrerit nulla ullamcorper a ipsum nisl.</p>
                 <div class="vcl-btn-cntlr">
@@ -602,7 +602,7 @@
                 </div>
               </div>
 
-              <div id="tab-5" class="Vehicle-desc fl-tab-content">
+              <div id="tab-5" class="Vehicle-desc fl-tab-content vcl-tab-content">
                 <h2 class="Vehicle-desc-title fl-h2">Vehicle Tow & Recovery 5</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales sagittis lorem sed mattis. Nunc rutrum mattis pulvinar. In sem velit, faucibus non mauris sed, mattis auctor purus. Etiam egestas nisl eget dapibus suscipit. Nam rutrum nisl sapien, id hendrerit nulla ullamcorper a ipsum nisl.</p>
                 <div class="vcl-btn-cntlr">
@@ -615,7 +615,7 @@
                 </div>
               </div>
 
-              <div id="tab-6" class="Vehicle-desc fl-tab-content">
+              <div id="tab-6" class="Vehicle-desc fl-tab-content vcl-tab-content">
                 <h2 class="Vehicle-desc-title fl-h2">Vehicle Tow & Recovery 6</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales sagittis lorem sed mattis. Nunc rutrum mattis pulvinar. In sem velit, faucibus non mauris sed, mattis auctor purus. Etiam egestas nisl eget dapibus suscipit. Nam rutrum nisl sapien, id hendrerit nulla ullamcorper a ipsum nisl.</p>
                 <div class="vcl-btn-cntlr">
