--- a/themes/mypiggyback/front-page.html
+++ b/themes/mypiggyback/front-page.html
@@ -550,7 +550,7 @@
           <div class="Vehicle-cntlr">
             <div class="Vehicle-desc-cntlr">
 
-              <div id="tab-1" class="Vehicle-desc fl-tab-content vcl-tab-content current">
+              <div id="vcl-tab-1" class="Vehicle-desc fl-tab-content vcl-tab-content current">
                 <h2 class="Vehicle-desc-title fl-h2">Vehicle Tow & Recovery</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales sagittis lorem sed mattis. Nunc rutrum mattis pulvinar. In sem velit, faucibus non mauris sed, mattis auctor purus. Etiam egestas nisl eget dapibus suscipit. Nam rutrum nisl sapien, id hendrerit nulla ullamcorper a ipsum nisl.</p>
                 <div class="vcl-btn-cntlr">
@@ -563,7 +563,7 @@
                 </div>
               </div>
 
-              <div id="tab-2" class="Vehicle-desc fl-tab-content vcl-tab-content">
+              <div id="vcl-tab-2" class="Vehicle-desc vcl-tab-content">
                 <h2 class="Vehicle-desc-title fl-h2">Vehicle Tow & Recovery 2</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales sagittis lorem sed mattis. Nunc rutrum mattis pulvinar. In sem velit, faucibus non mauris sed, mattis auctor purus. Etiam egestas nisl eget dapibus suscipit. Nam rutrum nisl sapien, id hendrerit nulla ullamcorper a ipsum nisl.</p>
                 <div class="vcl-btn-cntlr">
@@ -576,7 +576,7 @@
                 </div>
               </div>
 
-              <div id="tab-3" class="Vehicle-desc fl-tab-content vcl-tab-content">
+              <div id="vcl-tab-3" class="Vehicle-desc vcl-tab-content">
                 <h2 class="Vehicle-desc-title fl-h2">Vehicle Tow & Recovery 3</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales sagittis lorem sed mattis. Nunc rutrum mattis pulvinar. In sem velit, faucibus non mauris sed, mattis auctor purus. Etiam egestas nisl eget dapibus suscipit. Nam rutrum nisl sapien, id hendrerit nulla ullamcorper a ipsum nisl.</p>
                 <div class="vcl-btn-cntlr">
@@ -589,7 +589,7 @@
                 </div>
               </div>
 
-              <div id="tab-4" class="Vehicle-desc fl-tab-content vcl-tab-content">
+              <div id="vcl-tab-4" class="Vehicle-desc vcl-tab-content">
                 <h2 class="Vehicle-desc-title fl-h2">Vehicle Tow & Recovery 4</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales sagittis lorem sed mattis. Nunc rutrum mattis pulvinar. In sem velit, faucibus non mauris sed, mattis auctor purus. Etiam egestas nisl eget dapibus suscipit. Nam rutrum nisl sapien, id hendrerit nulla ullamcorper a ipsum nisl.</p>
                 <div class="vcl-btn-cntlr">
@@ -602,7 +602,7 @@
                 </div>
               </div>
 
-              <div id="tab-5" class="Vehicle-desc fl-tab-content vcl-tab-content">
+              <div id="vcl-tab-5" class="Vehicle-desc vcl-tab-content">
                 <h2 class="Vehicle-desc-title fl-h2">Vehicle Tow & Recovery 5</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales sagittis lorem sed mattis. Nunc rutrum mattis pulvinar. In sem velit, faucibus non mauris sed, mattis auctor purus. Etiam egestas nisl eget dapibus suscipit. Nam rutrum nisl sapien, id hendrerit nulla ullamcorper a ipsum nisl.</p>
                 <div class="vcl-btn-cntlr">
@@ -615,7 +615,7 @@
                 </div>
               </div>
 
-              <div id="tab-6" class="Vehicle-desc fl-tab-content vcl-tab-content">
+              <div id="vcl-tab-6" class="Vehicle-desc vcl-tab-content">
                 <h2 class="Vehicle-desc-title fl-h2">Vehicle Tow & Recovery 6</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales sagittis lorem sed mattis. Nunc rutrum mattis pulvinar. In sem velit, faucibus non mauris sed, mattis auctor purus. Etiam egestas nisl eget dapibus suscipit. Nam rutrum nisl sapien, id hendrerit nulla ullamcorper a ipsum nisl.</p>
                 <div class="vcl-btn-cntlr">
@@ -638,7 +638,7 @@
               <div class="vcl-tabs clearfix">
                 <div class="vcl-tab-link current">
                   <span>1</span>
-                  <button class="tab-link" data-tab="tab-1">
+                  <button class="tab-link" data-tab="vcl-tab-1">
                     <i><svg class="vcl-tab-icon-01" width="100" height="69.986" viewBox="0 0 100 69.986" fill="#141414">
                       <use xlink:href="#vcl-tab-icon-01"></use> </svg>
                     </i>
@@ -646,7 +646,7 @@
                 </div>
                 <div class="vcl-tab-link">
                   <span>2</span>
-                  <button class="tab-link" data-tab="tab-2">
+                  <button class="tab-link" data-tab="vcl-tab-2">
                     <i><svg class="vcl-tab-icon-02" width="78.648" height="80" viewBox="0 0 78.648 80" fill="#141414">
                       <use xlink:href="#vcl-tab-icon-02"></use> </svg>
                     </i>
@@ -654,7 +654,7 @@
                 </div>
                 <div class="vcl-tab-link">
                   <span>3</span>
-                  <button class="tab-link" data-tab="tab-3">
+                  <button class="tab-link" data-tab="vcl-tab-3">
                     <i><svg class="vcl-tab-icon-03" width="95.048" height="70" viewBox="0 0 95.048 70" fill="#141414">
                       <use xlink:href="#vcl-tab-icon-03"></use> </svg>
                     </i>
@@ -662,7 +662,7 @@
                 </div>
                 <div class="vcl-tab-link">
                   <span>4</span>
-                  <button class="tab-link" data-tab="tab-4">
+                  <button class="tab-link" data-tab="vcl-tab-4">
                     <i><svg class="vcl-tab-icon-04" width="88" height="65.312" viewBox="0 0 88 65.312" fill="#141414">
                       <use xlink:href="#vcl-tab-icon-04"></use> </svg>
                     </i>
@@ -670,7 +670,7 @@
                 </div>
                 <div class="vcl-tab-link">
                   <span>5</span>
-                  <button class="tab-link" data-tab="tab-5">
+                  <button class="tab-link" data-tab="vcl-tab-5">
                     <i><svg class="vcl-tab-icon-05" width="80.001" height="74.689" viewBox="0 0 80.001 74.689" fill="#141414">
                       <use xlink:href="#vcl-tab-icon-05"></use> </svg>
                     </i>
@@ -678,7 +678,7 @@
                 </div>
                 <div class="vcl-tab-link">
                   <span>6</span>
-                  <button class="tab-link" data-tab="tab-6">
+                  <button class="tab-link" data-tab="vcl-tab-6">
                     <i><svg class="vcl-tab-icon-06" width="71.368" height="75" viewBox="0 0 71.368 75" fill="#141414">
                       <use xlink:href="#vcl-tab-icon-06"></use> </svg>
                     </i>
