--- a/themes/mypiggyback/services.html
+++ b/themes/mypiggyback/services.html
@@ -181,7 +181,7 @@
       <div class="col-md-12">
         <div class="page-banner-wrp clearfix">
           <div class="page-banner-dsc">
-            <h1 class="fl-h1">Contact us...</h1>
+            <h1 class="fl-h1">Services...</h1>
           </div>
           <div class="breadcumbs">
             <ul class="reset-list clearfix">
@@ -191,9 +191,7 @@
                 </a>
               </li>
               <li class="active">
-                <a href="#">
                   <span>SERVICES</span>
-                </a>
               </li>
             </ul>
           </div>
@@ -202,7 +200,7 @@
     </div>
   </div>
 </section>
-<!--  -->
+
 <section class="services-page">
   <div class="services-item-cntrl">
     <div class="serv-fea-img">
