--- a/themes/mypiggyback/home2.html
+++ b/themes/mypiggyback/home2.html
@@ -230,7 +230,7 @@
             </div>
             <div class="ftr-menu ftr-col-3">
               <h4 class="ftr-menu-title fl-h4">Newsletter Signup...</h4>
-              <p>Sign up to our mailing list and receive  exclusive updates and discounts.  </p>
+              <p>Sign up to our mailing list and receive <br>  exclusive updates and discounts.  </p>
               <div class="ftr-search-box">
                 <input type="text" name="email" placeholder="Your email address">
                 <button>JOIN</button>
