--- a/themes/mypiggyback/about.html
+++ b/themes/mypiggyback/about.html
@@ -357,7 +357,8 @@
         <div class="mbp-about-num-sec-inr">
           <div class="mbp-about-num-lft-bg-color">
           </div>
-          <div class="fl-entry-hdr">
+          <div class="mbp-about-num-des">
+            <div class="fl-entry-hdr">
               <h2 class="mbp-about-entry-title left-icon-title fl-h2">
                 <span>Our Story in numbers...</span>
                 <i><img src="assets/images/title-location-icon-white.svg" alt=""></i>
@@ -374,7 +375,7 @@
                       <i><img src="assets/images/mpb-angi-img-01.svg"></i>
                     </div>
                     <div class="mbp-angi-des">
-                      <span>206,234</span>
+                      <span class="counter">206,234</span>
                       <strong>MILES TRAVELLED</strong>
                     </div>
                   </div>
@@ -391,7 +392,7 @@
                       <i><img src="assets/images/mpb-angi-img-02.svg"></i>
                     </div>
                     <div class="mbp-angi-des">
-                      <span>55,899</span>
+                      <span class="counter">55,899</span>
                       <strong>VEHICLES TOWED</strong>
                     </div>
                   </div>
@@ -408,7 +409,7 @@
                       <i><img src="assets/images/mpb-angi-img-03.svg"></i>
                     </div>
                     <div class="mbp-angi-des">
-                      <span>135,234</span>
+                      <span class="counter">135,234</span>
                       <strong>CUSTOMER CALLS</strong>
                     </div>
                   </div>
@@ -425,7 +426,7 @@
                       <i><img src="assets/images/mpb-angi-img-04.svg"></i>
                     </div>
                     <div class="mbp-angi-des">
-                      <span>103,725</span>
+                      <span class="counter">103,725</span>
                       <strong>ROADSIDE REPAIRS</strong>
                     </div>
                   </div>
@@ -435,6 +436,7 @@
                 </li>
               </ul>
             </div>
+          </div>
         </div>
       </div>
     </div>
@@ -548,46 +550,6 @@
 </section>
 
 
-<!-- <section class="mbp-location-sec inline-bg" style="background: url('assets/images/mbp-loca-bg.png');">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="mbp-location-sec-inr clearfix">
-          <div class="mbp-loaction-lft">
-            <div class="mbp-location-lft-img">
-              <img src="assets/images/mpb-about-img-01.jpg">
-            </div>
-          </div>
-          <div class="mbp-location-rgt">
-            <h2 class="mbp-location-entry-hdr-title left-icon-title fl-h2">
-              <span>Our Locations...</span>
-              <i><img src="assets/images/title-location-icon.svg" alt=""></i>
-            </h2>
-            <h3 class="mbp-loca-title left-icon-title">
-              <span>England </span>
-              <i class="fas fa-map-marker-alt"></i>
-            </h3>
-            <p>Phasellus a neque pretium, hendrerit tortor vitae, accumsan neque. Suspendisse posuere odio quam, id elementum arcu egestas at. Phasellus ante magna, egestas a ultricies quis, dapibus at massa. </p>
-            <h3 class="mbp-loca-title left-icon-title">
-              <span>Wales</span>
-              <i class="fas fa-map-marker-alt"></i>
-            </h3>
-            <p>Phasellus a neque pretium, hendrerit tortor vitae, accumsan neque. Suspendisse posuere odio quam, id elementum arcu egestas at.</p>
-            <h3 class="mbp-loca-title left-icon-title">
-              <span>Scotland</span>
-              <i class="fas fa-map-marker-alt"></i>
-            </h3>
-            <p>Phasellus a neque pretium, hendrerit tortor vitae, accumsan neque. Suspendisse posuere odio quam, id elementum arcu egestas at. </p>
-            <div class="mbp-location-btn">
-              <a class="fl-red-btn mbp-loca-btn" href="#">BOOK LOCAL SERVICE</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section> -->
-
 <div class="about-ctlr">
   <section class="mpb-about-sec inline-bg" style="background: url('assets/images/mbp-loca-bg.png');">
     <div class="container">
@@ -596,7 +558,7 @@
           <div class="mpb-about-sec-inr clearfix">
             <div class="mpb-about-lft">
               <div class="mpb-about-img">
-                <img src="assets/images/mpb-about-img-01.jpg">
+                <img src="assets/images/mpb-about-img-01.png">
               </div>
             </div>
             <div class="mpb-about-rgt">
@@ -648,41 +610,47 @@
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vulputate lobortis mollis fusce justo fringilla.</p>
               <div class="ftr-logo">
                 <a href="#"><img src="assets/images/ftr-logo.png"></a>
-                <span>A <strong>super quick</strong> lift from A to B</span>
+                <span class="ftr-logo-title">A <strong>super quick</strong> lift from A to B</span>
               </div>
             </div>
             <div class="ftr-menu ftr-col-1">
               <h4 class="ftr-menu-title fl-h4">Get in touch...</h4>
               <div class="ftr-menu-phn">
-                <i>
-                  <svg class="ftr-phn-icon-svg" width="17" height="16.151" viewBox="0 0 17 16.151" fill="#fff">
-                    <use xlink:href="#ftr-phn-icon-svg"></use>
-                  </svg> 
+                <a href="tel:+442920257257">
+                  +44 2920 257 257
+                  <i>
+                    <svg class="ftr-phn-icon-svg" width="17" height="16.151" viewBox="0 0 17 16.151" fill="#fff">
+                      <use xlink:href="#ftr-phn-icon-svg"></use>
+                    </svg> 
                 </i>
-                <a href="tel:+442920257257">+44 2920 257 257</a>
+                </a>
               </div>
               <div class="ftr-menu-mail">
-                <i>
-                  <svg class="ftr-email-icon-svg" width="19" height="12.666" viewBox="0 0 19 12.666" fill="#fff">
-                    <use xlink:href="#ftr-email-icon-svg"></use>
-                  </svg> 
-                </i>
-                <a href="mailto:info@mypiggyback.com">info@mypiggyback.com</a>
+                <a href="mailto:info@mypiggyback.com">
+                  info@mypiggyback.com
+                  <i>
+                    <svg class="ftr-email-icon-svg" width="19" height="12.666" viewBox="0 0 19 12.666" fill="#fff">
+                      <use xlink:href="#ftr-email-icon-svg"></use>
+                    </svg> 
+                  </i>
+                </a>
               </div>
               <div class="ftr-menu-location">
-                <i>
-                  <svg class="ftr-map-marker-icon-svg" width="16" height="21.333" viewBox="0 0 16 21.333" fill="#fff">
-                    <use xlink:href="#ftr-map-marker-icon-svg"></use>
-                  </svg> 
-                </i>
-                <a href="#">15 Ingestre Place, Suite 84, <br> London, W1F 0DU</a>
+                <a target="_blank" href="#">
+                  15 Ingestre Place, Suite 84, <br> London, W1F 0DU
+                  <i>
+                    <svg class="ftr-map-marker-icon-svg" width="16" height="21.333" viewBox="0 0 16 21.333" fill="#fff">
+                      <use xlink:href="#ftr-map-marker-icon-svg"></use>
+                    </svg> 
+                  </i>
+                </a>
               </div>
               <div class="ftr-menu-socials-media">
                 <ul class="reset-list">
-                  <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                  <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                  <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                  <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                  <li><a target="_blank" href="#"><i class="fab fa-facebook-f"></i></a></li>
+                  <li><a target="_blank" href="#"><i class="fab fa-twitter"></i></a></li>
+                  <li><a target="_blank" href="#"><i class="fab fa-instagram"></i></a></li>
+                  <li><a target="_blank" href="#"><i class="fab fa-linkedin-in"></i></a></li>
                 </ul>
               </div>
             </div>
@@ -699,7 +667,7 @@
             </div>
             <div class="ftr-menu ftr-col-3">
               <h4 class="ftr-menu-title fl-h4">Newsletter Signup...</h4>
-              <p>Sign up to our mailing list and receive  exclusive updates and discounts.  </p>
+              <p>Sign up to our mailing list and receive <br>  exclusive updates and discounts.  </p>
               <div class="ftr-search-box">
                 <input type="text" name="email" placeholder="Your email address">
                 <button>JOIN</button>
